--- a/prelogin.css
+++ b/prelogin.css
@@ -1,4 +1,22 @@
-        body {
+
+	.logo-container {
+    		display: flex;
+    		align-items: center;
+	}
+
+	.logo {
+    		width: 50px; /* Adjust based on logo size */
+    		height: auto;
+    		margin-right: 15px;
+	}
+
+	.logo-container h2 {
+    		font-size: 1.5rem;
+    		color: #1C1D22;
+    		margin: 0;
+	}
+        
+	body {
             font-family: Arial, sans-serif;
             background-color: #F9FAFA;
             margin: 0;
