--- a/Mentor/schedule.css
+++ b/Mentor/schedule.css
@@ -53,7 +53,7 @@ body {
     .sidebar {
       background-color: #2c3e50;
       color: white;
-      width: 70px;
+      width: 65px;
       height: 100vh;
       padding: 20px 0;
       position: fixed;
@@ -82,7 +82,7 @@ body {
       color: white;
       text-decoration: none;
       margin-bottom: 10px;
-      border-radius: 10px;
+      border-radius: 5px;
       transition: background-color 0.3s;
       opacity: 0;
       margin-left: -30px;
@@ -122,7 +122,8 @@ body {
       color: #1d8cd7;
     }
 
-    .task-card {
+
+    .schedule-card {
       background-color: white;
       border-radius: 10px;
       padding: 20px;
@@ -131,22 +132,22 @@ body {
       transition: box-shadow 0.3s, transform 0.3s;
     }
 
-    .task-card:hover {
+    .schedule-card:hover {
       box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
       transform: translateY(-5px);
     }
 
-    .task-card h3 {
+    .schedule-card h3 {
       font-size: 1.5rem;
       margin-bottom: 10px;
       color: #333;
     }
 
-    .task-card p {
+    .schedule-card p {
       color: #555;
     }
 
-    .task-card button {
+    .schedule-card button {
       background-color: #1d8cd7;
       color: white;
       border: none;
@@ -156,6 +157,6 @@ body {
       transition: background 0.3s;
     }
 
-    .task-card button:hover {
+    .schedule-card button:hover {
       background-color: #155a8a;
     }
